<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">InShorts</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="choose_hindi">भाषा का चयन करें</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="discover">Discover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading">Heading</string>
    <string name="tap_to_read_more">Tap to read more</string>
    <string name="news_headlines">News Headlines</string>
    <string name="news_description">News Description</string>
    <string name="swipe_left_to_read_more">Swipe left to read more</string>
    <string name="my_feed">My Feed</string>
    <string name="search_for_news">Search for news</string>
    <string name="categories">CATEGORIES</string>
    <string name="my_feed_capital">MY FEED</string>
    <string name="all_news">ALL NEWS</string>
    <string name="top_stories">TOP STORIES</string>
    <string name="trending">TRENDING</string>
    <string name="bookmarks">BOOKMARKS</string>
    <string name="unread">UNREAD</string>
    <string name="suggested_topics">SUGGESTED TOPICS</string>
    <string name="coronavirus">Coronavirus</string>
    <string name="india">India</string>
    <string name="business">Business</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="startups">Startups</string>
    <string name="entertainment">Entertainment</string>
    <string name="hatke">Hatke</string>
    <string name="international">International</string>
    <string name="automobile">Automobile</string>
    <string name="science">Science</string>
    <string name="travel">Travel</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="fashion">Fashion</string>
    <string name="education">Education</string>
    <string name="health_amp_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="skip">Skip</string>
    <string name="no_news">NO News</string>
    <string name="major_news">Major News</string>
    <string name="all_new">All News</string>
    <string name="personalise_your_feed">personalise your feed!</string>
    <string name="choose_relevance_color_to">Choose relevance color to</string>


    <style name="RadioButtonStyle" parent="Theme.AppCompat.Light.NoActionBar">
        <item name="colorAccent">#DE1919</item>
        <item name="android:textColorPrimary">#FFEB3B</item>


    </style>

    <style name="Profile">
        <!--        <item name="android:background">@drawable/whiterectangle</item>-->
        <item name="android:background">?android:selectableItemBackground</item>
        <item name="android:textColor">#B2000000</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">viewStart</item>
        <item name="android:layout_marginStart" tools:targetApi="jelly_bean_mr1">15dp</item>
        <item name="android:layout_marginEnd" tools:targetApi="jelly_bean_mr1">15dp</item>
        <item name="android:padding">10dp</item>
        <item name="android:fontFamily">@font/fira_sans</item>
    </style>
</resources>