<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CategoryPage">

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/dp10"
        android:layout_marginTop="@dimen/dp20"
        android:elevation="@dimen/dp10"
        android:padding="@dimen/dp10"
        android:text="@string/skip"
        android:textSize="@dimen/sp18"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/fira_sans"
        android:text="@string/choose_relevance_color_to"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPersonalise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/fira_sans"
        android:gravity="center_horizontal"
        android:text="@string/personalise_your_feed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="" />

    <com.ryan.rv_gallery.GalleryRecyclerView
        android:id="@+id/TopPicksRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:clipToPadding="false"
        app:helper="LinearSnapHelper"
        tools:listitem="@layout/item_layout"></com.ryan.rv_gallery.GalleryRecyclerView>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <RadioButton
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="10dp"
            android:button="@drawable/green_customise" />


        <RadioButton
            style="@style/RadioButtonStyle"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="50dp"
            android:button="@drawable/yellow_customise"
            />

        <RadioButton
            style="@style/RadioButtonStyle"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_margin="10dp"
            android:button="@drawable/customise_radio_button" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/all_new"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/major_news"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/no_news"
            android:textColor="@color/black"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>