<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNewsDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/dp10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llNewsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivNewsImg"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp260"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tvNewsHeadlines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp16"
                    android:lineSpacingExtra="@dimen/dp5"
                    android:padding="@dimen/dp2"
                    android:text="@string/news_headlines"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:id="@+id/tvNewsDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:lineSpacingExtra="@dimen/dp5"
                    android:padding="@dimen/dp2"
                    android:text="@string/news_description"
                    android:textColor="@color/gray_shade"
                    android:textSize="@dimen/sp14" />

                <TextView
                    android:id="@+id/tvSwipeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:padding="@dimen/dp2"
                    android:text="@string/swipe_left_to_read_more"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/sp11"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivUrl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp70"
                android:layout_below="@id/llNewsInfo"
                android:layout_gravity="bottom"
                android:background="@color/gray_background"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llNewsInfo"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp35"
                android:padding="@dimen/dp2"
                android:text="@string/heading"
                android:textColor="@color/white"
                android:textSize="@dimen/sp14" />

            <TextView
                android:id="@+id/tvReadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/llNewsInfo"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp40"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginBottom="@dimen/dp20"
                android:padding="@dimen/dp2"
                android:text="@string/tap_to_read_more"
                android:textColor="@color/white"
                android:textSize="@dimen/sp11" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>