<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.SelectLanguage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="108dp"
        android:src="@drawable/aa_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp50"
        android:text="@string/choose_your_language"
        android:textColor="@color/black"
        android:textSize="@dimen/sp25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:text="@string/choose_hindi"
        android:textColor="@color/black"
        android:textSize="@dimen/sp25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_button_selector"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp"
                android:textColor="@drawable/radio_text_selector"
                android:button="@android:color/transparent"
                android:text="@string/english"
                android:layout_margin="5dp"
                android:textSize="@dimen/sp25" />

            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/hindi"
                android:paddingRight="55dp"
                android:textSize="@dimen/sp25"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@drawable/radio_text_selector"
                android:layout_margin="5dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_button_selector"
                android:layout_height="wrap_content"
                android:paddingLeft="55dp"/>
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>