<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNewsDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/dp10">

        <LinearLayout
            android:id="@+id/llNewsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivNewsImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp260"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/tvNewsHeadlines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16"
                android:lineSpacingExtra="@dimen/dp5"
                android:padding="2dp"
                android:text="@string/news_headlines"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tvNewsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:lineSpacingExtra="5dp"
                android:padding="2dp"
                android:text="@string/news_description"
                android:textColor="@color/gray_shade"
                android:textSize="@dimen/sp14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSwipeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:padding="2dp"
                    android:text="@string/swipe_left_to_read_more"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/sp11"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp10"
                    android:padding="@dimen/dp2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/sp11" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp2"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/sp11" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivUrls"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp60"
            android:layout_gravity="bottom"
            android:background="@color/gray_background"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp20"
            android:padding="@dimen/dp2"
            android:text="@string/heading"
            android:textColor="@color/white"
            android:textSize="@dimen/sp13" />

        <TextView
            android:id="@+id/tvReadMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp8"
            android:padding="@dimen/dp2"
            android:textColor="@color/white"
            android:textSize="@dimen/sp11" />

    </androidx.cardview.widget.CardView>
</LinearLayout>